--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/express": "^4.17.8",
+        "@types/pg": "^7.14.5",
         "@typescript-eslint/eslint-plugin": "^4.4.1",
         "@typescript-eslint/parser": "^4.4.1",
         "eslint": "^7.11.0",
@@ -23,6 +24,7 @@
         "typescript": "^4.0.3"
     },
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "pg": "^8.4.1"
     }
 }
