--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.8",
         "@types/pg": "^7.14.5",
         "@typescript-eslint/eslint-plugin": "^4.4.1",
@@ -24,6 +25,7 @@
         "typescript": "^4.0.3"
     },
     "dependencies": {
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "pg": "^8.4.1"
     }
